--- a/index.html
+++ b/index.html
@@ -242,13 +242,13 @@
     <!-- 隐藏的文件输入 -->
     <input type="file" id="fileInput" accept=".txt" style="display: none;">
 
-    <script src="js/main.js"></script>
-    <script src="js/theme.js"></script>
-    <script src="js/scroll.js"></script>
-    <script src="js/text.js"></script>
-    <script src="js/audio.js"></script>
-    <script src="js/settings.js"></script>
-    <script src="js/watermark.js"></script>
-    <script src="js/flip.js"></script>
+    <script src="js/main.js" type="module"></script>
+    <script src="js/theme.js" type="module"></script>
+    <script src="js/scroll.js" type="module"></script>
+    <script src="js/text.js" type="module"></script>
+    <script src="js/audio.js" type="module"></script>
+    <script src="js/settings.js" type="module"></script>
+    <script src="js/watermark.js" type="module"></script>
+    <script src="js/flip.js" type="module"></script>
 </body>
 </html>
