--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>智能提词器</title>
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/theme.css">
     <link rel="stylesheet" href="styles/sidebar.css">
@@ -243,12 +244,5 @@
     <input type="file" id="fileInput" accept=".txt" style="display: none;">
 
     <script src="js/main.js" type="module"></script>
-    <script src="js/theme.js" type="module"></script>
-    <script src="js/scroll.js" type="module"></script>
-    <script src="js/text.js" type="module"></script>
-    <script src="js/audio.js" type="module"></script>
-    <script src="js/settings.js" type="module"></script>
-    <script src="js/watermark.js" type="module"></script>
-    <script src="js/flip.js" type="module"></script>
 </body>
 </html>
